# ml-object-detector

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini
app/: model.ipynb
config/: config.yaml  load_config.py
etl/: download_images.py
scripts/: run_etl.py
src/ml_object_detector/: fastapi_app.py
src/ml_object_detector/api/: __init__.py  detect.py  home.py  run_api.py  upload.py
src/ml_object_detector/app/: fastapi_app.py  model.ipynb  run_api.py
src/ml_object_detector/cli/: run_etl.py  run_pipeline.py
src/ml_object_detector/config/: config.yaml  load_config.py
src/ml_object_detector/domain/: errors.py
src/ml_object_detector/etl/: download_images.py
src/ml_object_detector/legacy/: fastapi_app_legacy.py
src/ml_object_detector/models/: predictor.py
src/ml_object_detector/postprocess/: analysis.py  html_report.py
src/ml_object_detector/postprocess/templates/: results.html.j2
src/ml_object_detector/services/: detector.py  file_inspection.py  policy.py
src/ml_object_detector/utils/: clean_query_names.py  email_alarm.py  fs.py  logging.py
tests/: test_file_inspection.py  test_predictor.py  test_slugify.py  test_upload_api.py
