[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_object_detector"
version = "0.1.0"
dependencies = []

[project.scripts]
ml-etl = "scripts.run_etl:main"


[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "nbconvert>=7.16",
  "nbdime>=3.2",
]

[tool.setuptools.packages.find]
where = ["."]
